<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/layout"
    android:layout_height="match_parent">
    <!-- https://www.tutorialspoint.com/how-can-i-make-my-layout-scroll-vertically-in-android -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <!-- TODO: As a group we need to define a standard event poster size so this
            can be scaled properly -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/o_editEvent_backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:backgroundTint="@color/lightest_purple"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/back_arrow"
                    android:contentDescription="Back"/>

                <ImageButton
                    android:id="@+id/o_editEvent_addImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:backgroundTint="@color/light_purple"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/upload_image_icon" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/o_editevent_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto_mono_bold"
                android:text="Event Details"
                android:textColor="@color/title_text"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/o_editEvent_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Name"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/o_editEvent_name_edit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:fontFamily="@font/roboto_mono_medium"
                android:hint="Event Name"
                android:inputType="text"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/o_editEvent_dataTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Date &amp; Time"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/o_editEvent_dataTime_edit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:fontFamily="@font/roboto_mono_medium"
                android:hint="Event Date &amp; Time"
                android:inputType="text"
                android:textColor="@color/dark_purple"
                android:clickable="false"
                android:focusable="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/o_editEvent_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Price (CAD)"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/o_editEvent_price_edit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:fontFamily="@font/roboto_mono_medium"
                android:hint="Event Price"
                android:inputType="text"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/o_editEvent_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Location"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/o_editEvent_location_edit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:fontFamily="@font/roboto_mono_medium"
                android:hint="Event Location"
                android:inputType="text"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/o_editEvent_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Description"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/o_editEvent_description_edit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:fontFamily="@font/roboto_mono_medium"
                android:hint="Event Description"
                android:inputType="text"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <Button
                android:id="@+id/o_editEvent_update_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="120dp"
                android:backgroundTint="@color/main_buton"
                android:text="Update Event"
                android:textColor="@color/main_button_text" />

            <!-- this is only added for testing an serves no purpose other that a
            reference to the bottom of the screen -->
            <TextView
                android:id="@+id/o_editEvent_bottom_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>