<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    tools:context=".user.EventFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--  event image  -->
            <ImageView
                android:id="@+id/u_eventImageView"
                android:layout_width="0dp"
                android:layout_height="230dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--    text fields - date -->
            <TextView
                android:id="@+id/u_eventDateView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="October 21, 2024"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/u_eventImageView" />

            <!--    text fields - event name -->
            <TextView
                android:id="@+id/u_eventNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="Hippo Party"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/u_eventDateView" />

            <!--    text fields - organizer -->

            <TextView
                android:id="@+id/u_organizerNameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/mid_light_rounded_corners"
                android:drawableStart="@drawable/organizer_profile_picture"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="The Hippopotamus Society"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/u_eventNameView" />

            <TextView
                android:id="@+id/u_eventTimeView"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:drawableStart="@drawable/icon_time"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="4:00 PM MST - 4:00 AM MST"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/u_organizerNameView"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/u_eventLocationView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:drawableStart="@drawable/icon_location"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="The Swamp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/u_eventTimeView" />

            <TextView
                android:id="@+id/u_eventCostView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:drawableStart="@drawable/icon_card"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="$150.00 CAD"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/u_eventLocationView" />

            <TextView
                android:id="@+id/u_aboutEventTitleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:text="About This Event:"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/u_eventCostView" />

            <TextView
                android:id="@+id/u_aboutEventDescriptionView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/light_rounded_corners"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="@string/filler_long"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/u_aboutEventTitleView" />

            <Button
                android:id="@+id/button_view_entrants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="150dp"
                android:backgroundTint="@color/main_buton"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="View Entrants"
                android:textColor="@color/main_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/o_button_view_QR"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/o_button_view_QR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/main_buton"
                android:layout_marginTop="10dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="ViewQR"
                android:textColor="@color/main_button_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/u_aboutEventDescriptionView" />


            <ImageButton
                android:id="@+id/u_edit_event_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/e_p_ic_edit"
                app:layout_constraintBottom_toTopOf="@+id/u_eventNameView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.976" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/u_backButtonToQRView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:tint="@color/dark_purple"
        app:backgroundTint="@color/light_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005"
        app:srcCompat="@drawable/left_arrow"
        android:contentDescription="Back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@drawable/rounded_top_corners"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/close_event_button"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/red"
                android:text="Draw Lottery" />

            <Button
                android:id="@+id/send_notification_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:text="Send Notifications" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>